fix task/list items being too wide

--- a/src/api/ui/views/lists.css
+++ b/src/api/ui/views/lists.css
@@ -1,7 +1,10 @@
 .datacore-list-item-content {
     display: inline-flex;
     justify-content: space-between;
-    width: -webkit-fill-available;
+    width: 100%;
+}
+.datacore-list-item-content > :first-child {
+    flex-grow: 1;
 }
 
 :is(ul, ol) li:not(:first-of-type) p:first-of-type {
